# 2d-normal-map-painter

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NormalCanvas.cpp  NormalCanvas.h  NormalSelectorSphere.cpp  NormalSelectorSphere.h  PreviewCanvas.cpp  PreviewCanvas.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  normalcanvas.cpp  normalcanvas.h  normalsphere.cpp  normalsphere.h
